--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clase 2</title>
+    <title>PreEntrega2 Avila</title>
     <link rel="shortcut icon" href="#" >
     <link rel="stylesheet" href="./css/styles.css">
     <script defer src="./js/script.js"></script>
