Le di funcionalidad con botones para que el usuario pueda hacer click en ellos, le di un poco estilo con css y modifiqué un poco el html

--- a/index.html
+++ b/index.html
@@ -3,20 +3,26 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PreEntrega2 Avila</title>
-    <link rel="shortcut icon" href="#" >
-    <link rel="stylesheet" href="./css/styles.css">
-    <script defer src="./js/script.js"></script>
+    <link rel="stylesheet" href="css/style.css">
+    <title>PreEntrega3</title>
 </head>
 
 <body>
-    <h1>Test de fútbol</h1>
-
-
-
-    
+    <div class="app">
+        <h1>Fútbol Trivia</h1>
+        <div class="quiz">
+            <h2 id="question">Acá las preguntas</h2>
+            <div id="answer-buttons">
+                <button class="btn">Respuesta 1</button>
+                <button class="btn">Respuesta 2</button>
+                <button class="btn">Respuesta 3</button>
+            </div>
+            <button id="next-btn">Siguiente</button>
+        </div>
+    </div>
+    <!-- scripts-->
+    <script src="js/script.js"></script>
 </body>
 
 </html>
