cree los archivos .json, package y apliqué nuevas funciones como 'fetch'y otras

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="app">
         <h1>Fútbol Trivia</h1>
         <div class="quiz">
-            <h2 id="question">Acá las preguntas</h2>
+            <h2 id="question">Las preguntas van aquí</h2>
             <div id="answer-buttons">
                 <button class="btn">Respuesta 1</button>
                 <button class="btn">Respuesta 2</button>
