Modifique la funcion de guardado de puntos en el localStorage

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>PreEntrega3</title>
+    <title>EntregaFinal-Avila</title>
 </head>
 
 <body>
     <div class="app">
-        <h1>Fútbol Trivia</h1>
+        <h1>Fútbol Trivia ⚽️</h1>
         <div class="quiz">
             <h2 id="question">Las preguntas van aquí</h2>
             <div id="answer-buttons">
