Agregue un sweetAlert para cuando finaliza el juego y también 4 preguntas nuevas

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         </div>
     </div>
     <!-- scripts-->
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="js/script.js"></script>
 </body>
 
